--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,42 +1,110 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
+  margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: #f4f4f4;
+  color: #333;
+}
+
+/* Header  */
+
+a {
+  text-decoration: none;
+  color: #333;
+}
+
+h1, h2 h3 {
+  font-weight: bold;
+}
+
+.header {
+  background-color: #0018a0;
+  color: #fff;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.header .logo {
+  font-size: 24px;
+}
+
+.header nav {
+  display: flex;
+  gap: 40px;
+}
+
+.header nav a {
+  color: #fff;
+  font-weight: bold;
+}
+
+.header nav a:hover {
+  color: #dbdbdb;
+  text-decoration: underline;
+}
+
+.icon {
+  color: 'white';
+  font-size: 20px;
+}
+
+/* Footer  */
+
+footer {
+  background-color: #0018a0;
+  color: #fff;
+  text-align: center;
+  padding: 20px;
+}
+
+footer p {
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* HomeContent Style  */
+
+.hero{
+  background-color: #333;
+  background-size: cover;
+  background-position: center;
+  background-blend-mode: overlay;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.hero h1 {
+  font-size: 58px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+}
+
+.hero p {
+  font-size: 20px;
+  margin-top: 10px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.6);
+}
+
+.hero button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: #0018a0;
+  color: #fff;
+  border: none;
+  font-weight: bold;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.hero button:hover {
+  background-color: #000e5c;
 }
